--- a/web/css/site.css
+++ b/web/css/site.css
@@ -441,23 +441,35 @@ left: 0;
 /******************* responsive site settings **********************/
 @media only screen and (max-width: 1200px){
 
-    #onama img {
-        display: none;
-    }
+#onama img {
+    display: none;
+}
 
-    .blueimp-gallery>.indicator>li {
-        display: none!important;
+.blueimp-gallery>.indicator>li {
+    display: none!important;
+}
+.buttons {
+    /*display: none!important;*/
+}
+.nen-navbar button{ }
+    .navbar-toggle {
+        position: relative;
+        float: right;
+        padding: 9px 10px;
+        margin-top: 8px;
+        margin-right: 15px;
+        margin-bottom: 8px;
+        background-color: gray;
+        border: 1px solid black;
+        border-radius: 4px;
     }
-    .buttons {
-        /*display: none!important;*/
-    }
-    .vezbanje img {
-        display: none;
-    }
-    
-    .vezbanje_2 img{
-        display: none;
-     }
+.vezbanje img {
+    display: none;
+}
+
+.vezbanje_2 img{
+    display: none;
+ }
 
 
 
