--- a/web/css/site.css
+++ b/web/css/site.css
@@ -441,17 +441,16 @@ left: 0;
 /******************* responsive site settings **********************/
 @media only screen and (max-width: 1200px){
 
-#onama img {
-    display: none;
-}
+    #onama img {
+        display: none;
+    }
 
-.blueimp-gallery>.indicator>li {
-    display: none!important;
-}
-.buttons {
-    /*display: none!important;*/
-}
-.nen-navbar button{ }
+    .blueimp-gallery>.indicator>li {
+        display: none!important;
+    }
+    .buttons {
+        /*display: none!important;*/
+    }
     .navbar-toggle {
         position: relative;
         float: right;
@@ -459,17 +458,25 @@ left: 0;
         margin-top: 8px;
         margin-right: 15px;
         margin-bottom: 8px;
-        background-color: gray;
-        border: 1px solid black;
-        border-radius: 4px;
+        background-color: #2a2a2a;
+        border: 1px solid #161616;
+        border-radius: 1px;
     }
-.vezbanje img {
-    display: none;
-}
+    .navbar-toggle :hover {
+        margin-top: 9px;
+        margin-right: 14px;
+        margin-bottom: 7px;
+        background-color: #3b3b3b;
+        border: 1px solid #808080;
+        border-radius: 1px;
+    }
+    .vezbanje img {
+        display: none;
+    }
 
-.vezbanje_2 img{
-    display: none;
- }
+    .vezbanje_2 img{
+        display: none;
+     }
 
 
 
