--- a/web/css/site.css
+++ b/web/css/site.css
@@ -458,7 +458,7 @@ left: 0;
         margin-top: 8px;
         margin-right: 15px;
         margin-bottom: 8px;
-        background-color: #2a2a2a;
+        /*background-color: #2a2a2a;*/
         background-image: url("/images/shaded_dot.png");
         border: 1px solid rgba(22, 22, 22, 0.78);
         border-radius: 4px;
@@ -467,7 +467,7 @@ left: 0;
         margin-top: 9px;
         margin-right: 14px;
         margin-bottom: 7px;
-        background-color: #6a6a6a;
+        /*background-color: #6a6a6a;*/
         background-image: url("/images/shaded_dot.png");
         border: 1px solid #191919;
         border-radius: 4px;
