--- a/web/css/site.css
+++ b/web/css/site.css
@@ -463,7 +463,7 @@ left: 0;
         border: 1px solid rgba(22, 22, 22, 0.78);
         border-radius: 4px;
     }
-    .navbar-toggle :focus {
+    .navbar-toggle :hover {
         margin-top: 9px;
         margin-right: 14px;
         margin-bottom: 7px;
