--- a/web/css/site.css
+++ b/web/css/site.css
@@ -458,19 +458,23 @@ left: 0;
         margin-top: 8px;
         margin-right: 15px;
         margin-bottom: 8px;
-        /*background-color: #2a2a2a;*/
+        background-color: #2a2a2a;
+        /*background-image: none;*/
         background-image: url("/images/shaded_dot.png");
         border: 1px solid rgba(22, 22, 22, 0.78);
         border-radius: 4px;
+        z-index: 999;
     }
     .navbar-toggle :hover {
         margin-top: 9px;
         margin-right: 13px;
         margin-bottom: 7px;
-        /*background-color: #6a6a6a;*/
+        background-color: #6a6a6a;
+        /*background-image: none;*/
         background-image: url("/images/shaded_dot.png");
         border: 1px solid #191919;
         border-radius: 4px;
+        z-index: 999;
     }
     .vezbanje img {
         display: none;
