--- a/web/css/site.css
+++ b/web/css/site.css
@@ -453,7 +453,20 @@ left: 0;
         color: #7b7b7b;
     }
     .carousel {display:none;}
-    .navbar-toggle { background-color: #3c3c3c;}
+
+    .navbar-toggle {
+        position: relative;
+        float: right;
+        padding: 1px 2px;
+        margin-top: 8px;
+        margin-right: 15px;
+        margin-bottom: 8px;
+        background-color: #3c3c3c;
+        background-image: none;
+        border: 1px solid transparent;
+        border-radius: 4px;
+    }
+
     .navbar-toggle .icon-bar { display: none;}
     /*#TopLogo {display:block}*/
     /*#TopLogo .small-logo {display:none}*/
