--- a/web/css/site.css
+++ b/web/css/site.css
@@ -449,12 +449,13 @@ left: 0;
         background: url("/images/moto1.png")no-repeat;
         background-size: 100% 100%;
         position: relative;
-        padding: 6% 21%;
+        padding: 6% 11%;
     }
     .moto h2 {
         text-align: center;
         font-size: 1.0em;
-        margin-top: 10px;
+        margin-top: 15px;
+        margin-bottom: 15px;
         padding: 3px 2px;
         color: #7b7b7b;
     }
