--- a/web/css/site.css
+++ b/web/css/site.css
@@ -470,11 +470,13 @@ left: 0;
         font-size: 0.7em;
         text-shadow: none;
     }
+    #nen-uvod img {
+        display: none;}
     .navbar-toggle {
         position: relative;
         float: right;
         padding: 9px 10px;
-        margin-top: 8px;
+        margin-top: 13px;
         margin-right: 15px;
         margin-bottom: 8px;
         background-color: #3c3c3c;
