--- a/web/css/site.css
+++ b/web/css/site.css
@@ -467,6 +467,7 @@ left: 0;
     }
     #nen-uvod p {
         color: #c6c6c6;
+        padding-right: 0;
         font-size: 0.7em;
         text-shadow: none;
     }
