--- a/web/css/site.css
+++ b/web/css/site.css
@@ -442,8 +442,13 @@ left: 0;
 /******************* responsive site settings **********************/
 /* Custom, iPhone Retina - xs <768 */
 @media only screen  and (max-width:767px) {
-    p{
-        font-size: 1em;
+    .banner img {
+        width: 100%;
+        height: 70px;
+        border-radius: 1em;
+        margin-top: 20px;
+        margin-bottom: 20px;
+        box-shadow: -3px -6px 9px #3c3c3c;
     }
     .moto {
         background: url("/images/moto1.png")no-repeat;
