--- a/web/css/site.css
+++ b/web/css/site.css
@@ -442,6 +442,21 @@ left: 0;
 /******************* responsive site settings **********************/
 /* Custom, iPhone Retina - xs <768 */
 @media only screen  and (max-width:767px) {
+
+    .navbar-brand > img {
+        display: none;
+    }
+    .show-hide-contact-bar, .contact-button-link.show-hide-contact-bar:focus, .contact-button-link.show-hide-contact-bar:active {
+        position: absolute;
+        top: 0;
+        left:50%;
+        color: #000;
+        text-shadow: 0px 0px 2px white;
+        border: 0;
+        outline: 0;
+        padding: 0;
+        width: 40px;
+    }
     .banner img {
         width: 100%;
         height: 70px;
