--- a/web/css/site.css
+++ b/web/css/site.css
@@ -447,9 +447,7 @@ left: 0;
         display: none;
     }
     #contact-buttons-bar {
-        position: absolute;
-        top: 0;
-        left:50%;
+       display: none;
     }
     .banner img {
         width: 100%;
