--- a/web/css/site.css
+++ b/web/css/site.css
@@ -446,12 +446,21 @@ left: 0;
     .navbar-brand > img {
         display: none;
     }
-    #contact-buttons-bar, .vezbanje {
-       display: none;
+
+    .text-correction {
+        margin: -15px 0 5px 0;
+        padding: 0;
+        font-size: 1em;
     }
-    .site-uvod> .buttons{
+
+    #contact-buttons-bar, .vezbanje {
+        display: none;
+    }
+
+    .site-uvod > .buttons {
         margin: 0;
     }
+
     .banner img {
         width: 100%;
         height: 70px;
@@ -460,12 +469,14 @@ left: 0;
         margin-bottom: 20px;
         box-shadow: -3px -6px 9px #3c3c3c;
     }
+
     .moto {
-        background: url("/images/moto1.png")no-repeat;
+        background: url("/images/moto1.png") no-repeat;
         background-size: 100% 100%;
         position: relative;
         padding: 6% 27%;
     }
+
     .moto h2 {
         text-align: center;
         font-size: 1.0em;
@@ -474,12 +485,16 @@ left: 0;
         padding: 3px 2px;
         color: #7b7b7b;
     }
-    .carousel {display:none;}
+
+    .carousel {
+        display: none;
+    }
 
     #nen-uvod {
-        padding: 6%;
+        padding: 50px;
         z-index: -5;
     }
+
     #nen-uvod p {
         color: #c6c6c6;
         padding-right: 0;
@@ -490,14 +505,40 @@ left: 0;
     .vezbanje img {
         display: none;
     }
-    #uvod-button {
-        margin-top: -20px;
-        width: 50px;
+
+    .uvod-button {
+        display: none;
     }
-    .text-correction {
-        padding: 6%;
-        font-size: 1em;
+
+    .onama_program{
+        text-align: justify;
+        margin-left: 20px;
+        font-size: 1.0em;
     }
+
+    #onama-corect{margin-left: -50px!important;}
+
+    .par2 img{
+        margin-top: -100%;
+        margin-left: -18%;
+    }
+    .programi {
+        font-size: 0.9em;
+        margin-top: 10%;
+        margin-left: -10%;
+        padding: 15% 10% 10% 10%;
+        text-align: justify;
+        text-indent: 2%;
+    }
+
+    .programi p {
+        padding: 0!important;
+    }
+
+    .programi > .buttons {margin-top: 20px!important;}
+
+    .vezbanje_2 img {display: none}
+
     .navbar-toggle {
         position: relative;
         float: right;
@@ -511,191 +552,10 @@ left: 0;
         border-radius: 4px;
     }
 
-    .navbar-toggle .icon-bar { display: none;}
-    /*#TopLogo {display:block}*/
-    /*#TopLogo .small-logo {display:none}*/
-    /*#TopBasket {margin-right:35px;}*/
-    /*#TopBasket li a {padding:0 7px;}*/
-    /*#TopBasket li:first-child a,*/
-    /*#TopBasket li:last-child a {border-radius:0;}*/
-    /*#TopBasketStatus {font-size:12px;}*/
-    /*#TopBasketStatus .fa {display:none}*/
-    /*#TopBasketStatus .price .currency {font-size:80%}*/
-    /*#MenuBtnTop {top:0;right:0;opacity:1;}*/
-    /*#BottomTop .wrapper {text-align:center}*/
-    /*#BottomTop a {*/
-    /*width:25px;*/
-    /*float:none;*/
-    /*margin:0 5px;*/
-    /*text-indent:-9999px;*/
-    /*display:inline-block}*/
-    /*#BottomTop a i {*/
-    /*margin:0;*/
-    /*float:left}*/
-    /*#FatFooter {height:250px}*/
-    /*#FatFooterMenus {padding:0}*/
-    /*#SmallFooter {*/
-    /*padding:0 20px;*/
-    /*line-height:20px;}*/
-    /*#BusinessHours.col-sm-4 {*/
-    /*display:block;*/
-    /*text-align:center}*/
-    /*#BusinessHours .list-unstyled {*/
-    /*width:60%;*/
-    /*margin:20px 20%;*/
-    /*text-align:left;}*/
-
-    /*body {padding-bottom:300px}*/
-
-    /*.tabPanel {}*/
-    /*.tabPanel .nav-tabs li {*/
-    /*margin:0;*/
-    /*width:100%;*/
-    /*font-size:20px;*/
-    /*line-height:24px}*/
-    /*.tabPanel .nav-tabs li a {border-radius:0}*/
-    /*.tabPanel .nav-tabs>li.active a {border:1px solid #CCC;}*/
-
-    /*.productsGrid,*/
-    /*.productsGridTab {margin:0 0 30px 0}*/
-    /*.product,*/
-    /*.productsGridTab .product,*/
-    /*#HomeTabPanel .product {*/
-    /*width:48%;*/
-    /*float:left;*/
-    /*margin:10px 1%;*/
-    /*border-bottom:none;}*/
-    /*.productsGrid .product:nth-child(2n+1) {clear:left;border-left:none}*/
-    /*.product .details {padding:0 10px}*/
-    /*.product .rating {margin-bottom:10px}*/
-    /*.openMenu .productsGrid .product .image {max-height:none}*/
-
-    /*.breadcrumb {margin-left:10px}*/
-    /*.breadcrumb > a {font-size:16px;line-height:24px}*/
-    /*#BackButton {top:-10px;right:10px}*/
-
-    /*.form-group {margin-bottom:30px}*/
-
-    /*#BigWidgetSlider .rsTabs {display:none}*/
-    /*#BigWidgetSlider .rsContent img {max-width:100%}*/
-    /*#BigWidget {*/
-    /*max-height:none;*/
-    /*background-position:center bottom}*/
-    /*#BigWidgetSlider {width:100%}*/
-    /*#BigWidgetSlider .nav-tabs li {width:100%}*/
-    /*#BigWidgetLinks {width:100%}*/
-    /*#BigWidgetLinks a {*/
-    /*width:46%;*/
-    /*margin:2%;*/
-    /*clear:none;*/
-    /*float:left;*/
-    /*border:none}*/
-    /*#BigWidgetLinks a img {float:none;}*/
-    /*#BigWidgetLinks .text {*/
-    /*height:120px;*/
-    /*line-height:1em;*/
-    /*border-radius:6px;*/
-    /*margin:-70px 0 0 0;*/
-    /*padding:75px 10px 5px 10px;}*/
-    /*#BigWidgetLinks .text span {font-size:16px}*/
-
-    /*#SmallBanners {height:auto}*/
-    /*#SmallBanners a {width:22%}*/
-
-    /*#HomeImages article header {*/
-    /*font-size:16px;*/
-    /*height:60px;*/
-    /*line-height:60px;}*/
-    /*#HomeImages article .image img {max-width:100%}*/
-    /*#HomeImages article p {*/
-    /*height:40px;*/
-    /*font-size:14px;*/
-    /*line-height:1.4;*/
-    /*overflow:hidden;*/
-    /*margin:5px 10px;}*/
-
-    /*#HomeTabPanel .nav-tabs {margin:0 10px 24px 10px}*/
-    /*#HomeTabPanel .nav-tabs li {width:30%}*/
-    /*	#HomeTabPanel .product {*/
-    /*float:left;*/
-    /*clear:none;*/
-    /*width:50%;*/
-    /*border-bottom:none}*/
-    /*#HomeTabPanel .product:nth-child(3),*/
-    /*#HomeTabPanel .product:nth-child(4) {display:none}*/
-
-    /*#GetFuns {margin:10px}*/
-    /*#GetFunsText,*/
-    /*#GetFunsFB {*/
-    /*padding:0;*/
-    /*float:none;*/
-    /*width:220px;*/
-    /*height:60px;*/
-    /*margin:10px auto;}*/
-    /*#GetFunsText {width:auto;height:auto;}*/
-    /*#GetFunsText h4 {font-size:20px}*/
-    /*#GetFunsText:after {display:none}*/
-    /*#GetFuns form {padding:10px 0 5px 0;height:auto}*/
-
-    /*#Content {margin-top:30px}*/
-    /*#Content .pageTitle {*/
-    /*font-size:30px;*/
-    /*line-height:55px;*/
-    /*text-align:center;*/
-    /*margin:0 0 50px 0;*/
-    /*padding:0 10px;*/
-    /*background:none;}*/
-    /*#Content .bigQuote {*/
-    /*font-size:16px;*/
-    /*line-height:20px;}*/
-    /*#Content .bigQuote:before {*/
-    /*content:'“';*/
-    /*font-size:20px;*/
-    /*display:inline;*/
-    /*background:none;}*/
-    /*#Content .bigQuote:after {font-size:20px;}*/
-    /*#Content .bigQuote strong {font-size:20px;}*/
-
-    /*#ContactForm {padding-right:0;margin-bottom:60px}*/
-
-    /*#CategoriesHeader {padding:20px;display:block}*/
-    /*#CategoriesHeader h1 {font-size:24px}*/
-    /*#BigBanner {display:none}*/
-    /*.wrapper_bigBanner {height:auto}*/
-    /*.openMenu .sort_items,*/
-    /*.openMenu #Search_product ul {margin-left:0}*/
-    /*#Search_product ul li i {display:none}*/
-    /*#Search_product ul li {margin-right:0;padding:0 5px;}*/
-    /*#CategoriesProducts {text-align:center}*/
-    /*#CategoriesProducts .pagination {*/
-    /*float:none;*/
-    /*margin:auto;*/
-    /*display:inline-block;}*/
-    /*#BigImage {margin-bottom:20px}*/
-    /*#ProductCard {padding:0 10px}*/
-    /*#ProductCardShow {width:100%}*/
-    /*#ProductDetails,*/
-    /*#ProductDetailsCart {margin-bottom:30px;}*/
-    /*#ProductDetails .info {height:auto;padding-top:0}*/
-    /*#ProductDetails .price {margin-top:10px}*/
-    /*#ProductDetails .info label {display:block;margin:10px 0;font-size:14px}*/
-    /*#ProductDetails .size .select {width:150px}*/
-    /*#ProductCard .tabPanel .nav-tabs {padding:0}*/
-
-    /*.stickyBanner {*/
-    /*width:320px;*/
-    /*background-image:url(../img/stickyBanner-320.jpg);}*/
-    /*.stickyBanner.right {top:40px;right:-280px}*/
-    /*.stickyBanner img {display:none}*/
-    /*.stickyBanner .getEmail {*/
-    /*left:70px;*/
-    /*bottom:80px;*/
-    /*width:280px;}*/
-    /*.stickyBanner .getEmail input,*/
-    /*.stickyBanner .getEmail button {height:25px}*/
-    /*.stickyBanner .getEmail button {font-size:12px;width:80px}*/
+    .navbar-toggle .icon-bar {
+        display: none;
+    }
 }
-
 /* Extra Small Devices, Phones */
 @media only screen and (min-width:480px) and (max-width:767px) {
     /*#TopLogo .mini-logo {display:none}*/
