--- a/web/css/site.css
+++ b/web/css/site.css
@@ -510,17 +510,17 @@ left: 0;
         display: none;
     }
 
+    #onama p {margin-top: 0!important;}
+
     .onama_program{
         text-align: justify;
-        margin-left: 20px;
         font-size: 1.0em;
     }
 
     #onama-corect{margin-left: -50px!important;}
 
     .par2 img{
-        margin-top: -100%;
-        margin-left: -18%;
+        display: none;
     }
     .programi {
         font-size: 0.9em;
@@ -533,6 +533,7 @@ left: 0;
 
     .programi p {
         padding: 0!important;
+        /*margin: 0!important;*/
     }
 
     .programi > .buttons {margin-top: 20px!important;}
