--- a/web/css/site.css
+++ b/web/css/site.css
@@ -464,28 +464,31 @@ left: 0;
     }
 
     .banner img {
-        width: 100%;
-        height: 70px;
+        width: 120%;
+        height: 90px;
         border-radius: 1em;
-        margin-top: 20px;
+        margin-left: -10%;
+        margin-top: -10px;
         margin-bottom: 20px;
         box-shadow: -3px -6px 9px #3c3c3c;
     }
 
     .moto {
         background: url("/images/moto1.png") no-repeat;
-        background-size: 100% 100%;
+        background-size: 110% 100%;
+        margin-left: -10%;
+        margin-top: -17px;
         position: relative;
-        padding: 6% 27%;
+        padding: 6% 26%;
     }
 
     .moto h2 {
         text-align: center;
         font-size: 1.0em;
-        margin-top: 15px;
-        margin-bottom: 15px;
-        padding: 3px 2px;
-        color: #7b7b7b;
+        margin-top: 20px;
+        margin-bottom: 28px;
+        margin-left: 23px;
+        padding: 5px 1px;
     }
 
     .carousel {
