--- a/web/css/site.css
+++ b/web/css/site.css
@@ -465,10 +465,10 @@ left: 0;
 
     .banner img {
         width: 120%;
-        height: 90px;
-        border-radius: 1em;
+        height: 80px;
+        border-radius: 0;
         margin-left: -10%;
-        margin-top: -10px;
+        margin-top: -15px;
         margin-bottom: 20px;
         box-shadow: -3px -6px 9px #3c3c3c;
     }
@@ -479,7 +479,7 @@ left: 0;
         margin-left: -10%;
         margin-top: -17px;
         position: relative;
-        padding: 6% 26%;
+        padding: 6% 24%;
     }
 
     .moto h2 {
@@ -487,7 +487,7 @@ left: 0;
         font-size: 1.0em;
         margin-top: 20px;
         margin-bottom: 28px;
-        margin-left: 23px;
+        margin-left: 29px;
         padding: 5px 1px;
     }
 
