--- a/web/css/site.css
+++ b/web/css/site.css
@@ -451,7 +451,7 @@ left: 0;
         background-color: #3b5998;
         position: fixed;
         text-align: center;
-        padding: 6px 2px;
+        padding: 7px 1px 2px 1px;
         border-radius: 4px;
         width: 30px;
         height: 30px;
