--- a/web/css/site.css
+++ b/web/css/site.css
@@ -646,12 +646,12 @@ left: 0;
     .navbar-toggle {
         position: relative;
         float: right;
-        padding: 9px 10px;
+        padding: 10px 4px 7px 8px;
         margin-top: 13px;
         margin-right: 15px;
         margin-bottom: 8px;
         background-color: #3c3c3c;
-        background-image: none;
+        background-image: url("/images/dot-small.png");
         border: 1px solid transparent;
         border-radius: 4px;
     }
