--- a/web/css/site.css
+++ b/web/css/site.css
@@ -651,7 +651,7 @@ left: 0;
         margin-right: 15px;
         margin-bottom: 8px;
         background-color: #3c3c3c;
-        background-image: url("../images/dot-small.png");
+        background-image: url("../images/navbar-mob.png");
         border: 1px solid transparent;
         border-radius: 4px;
     }
